add db raw query
